chore: save pending changes before frontend refactor
